sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:8: error: not found: value getValueNumber
  for (j <- 0 to getValueNumber()-1){
                 ^AlgCocktailSort1:14: error: not found: value getValueNumber
for (j <- getValueNumber()-1 to 0 by -1){
          ^