sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var a=true
    if (a==false){
      return
    }
  a=false
  for (j <- 0 to getValueNumber()-1){
    if (!isSmaller(j,j+1)){
      swap(j,j+1)
      a=true
		}
}
for (j <- getValueNumber()-1 to 0 by -1){
    if (!isSmaller(j,j+1)){
      swap(j,j+1)
      a=true
		}
}   
}